--- a/MeetingManager/templates/search.html
+++ b/MeetingManager/templates/search.html
@@ -4,57 +4,74 @@
 		<title>MeetingManager</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/static/assets/css/main.css" />
 	</head>
 	<body>
 
 		<!-- Header -->
 			<div id="header">
 				<span class="logo icon fa-paper-plane-o"></span>
-				<h1>Hi. I am 'Name'.</h1>
-				<p>Your new Manager</p>
-				<p>Take me with you in meetings and never miss anything important.</p>
-				<br />
+				<h1><a href="{{ url_for('profile_page') }}">{{ username }}</a></h1>
+				
+				<h3><a href="{{ url_for('login_page') }}">LogOut</a></h3>
+
+
+				<br><br><br><br>
+
+			<form method="post" action="/searchdata">
+				<div class="row">
+					<div class="6u 12u(mobilep)">
+						<ul class="actions">
+							<li><input type="text" name="textbox" placeholder="tags" /></li>
+						</ul>
+					</div>
+					<div class="6u 12u(mobilep)">
+						<ul class="actions">
+							<li><input type="submit" value="Search" /></li>
+						</ul>
+					</div>
+				</div>
+			</form>
+				
 			</div>
 
 		<!-- Main -->
 			<div id="main">
 
-			<!--	<header class="major container 75%">
-					<h2>We conduct experiments that
-					<br />
-					may or may not seriously
-					<br />
-					break the universe</h2>
+				<header class="major container 75%">
+					<h2>SEARCH RESULTS</h2>
 					
-					<p>Tellus erat mauris ipsum fermentum<br />
-					etiam vivamus nunc nibh morbi.</p>
-					
-				</header> -->
+				</header>
+				
 
-			<!--	<div class="box alt container">
-					<section class="feature left">
-						<a href="#" class="image icon fa-signal"><img src="images/pic01.jpg" alt="" /></a>
-						<div class="content">
-							<h3>The First Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
-						</div>
+				<div class="box container">
+					<header>
+						<h2>Elon Musk resignation required</h2>
+					</header>
+					<section>
+						<header>
+							<h3>Transcript</h3>
+						</header>
+						<p>{{transcript}}</p>
 					</section>
-					<section class="feature right">
-						<a href="#" class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
-						<div class="content">
-							<h3>The Second Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
-						</div>
+					<!--<section>
+						<header>
+							<h3>Blockquote</h3>
+						</header>
+						<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
+						tempus euismod. Vestibulum ante ipsum primis in faucibus.</blockquote>
+					</section>-->
+					<section>
+						<header>
+							<h3>Summary</h3>
+						</header>
+						<p>{{summary}}</p>
 					</section>
-					<section class="feature left">
-						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
-						<div class="content">
-							<h3>The Third Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
-						</div>
-					</section>
-				</div>-->
+				</div>
+			
+
+
+				</div>
 
 				<!--
 				<div class="box container">
@@ -203,7 +220,7 @@
 						</form>
 					</section>
 				</div>
-				-->
+				
 
 			
 				<footer class="major container 75%">
@@ -214,20 +231,22 @@
 					</ul>
 				</footer>
 
-			</div>
+			</div>-->
 
 		<!-- Footer -->
 			<div id="footer">
 				<div class="container 75%">
 
-					<header class="major last">
+
+					
+					<!--<header class="major last">
 						<h2>Login</h2>
-					</header>
+					</header>-->
 
 					<!--<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
 					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>-->
 
-					<form method="post" action="#">
+					<!--<form method="post" action="#">
 						<div class="row">
 							<div class="6u 12u(mobilep)">
 								<input type="text" name="username" placeholder="Username" />
@@ -246,7 +265,7 @@
 								</ul>
 							</div>
 						</div>
-					</form>
+					</form>-->
 
 
 					<ul class="copyright">
@@ -257,11 +276,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="/static/assets/js/jquery.min.js"></script>
+			<script src="/static/assets/js/skel.min.js"></script>
+			<script src="/static/assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="/static/assets/js/main.js"></script>
 
 	</body>
 </html>
