--- a/MeetingManager/templates/upload.html
+++ b/MeetingManager/templates/upload.html
@@ -4,50 +4,43 @@
 		<title>MeetingManager</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/static/assets/css/main.css" />
 	</head>
 	<body>
 
 		<!-- Header -->
 			<div id="header">
 				<span class="logo icon fa-paper-plane-o"></span>
-				<h1><a href="profile.html">User Name</a></h1>
-				<p>username</p><br><br>
-				<h3><a href="login.html">LogOut</a></h3>
+				<h1><a href="{{ url_for('profile_page') }}">{{ username }}</a></h1>
+			
+				<h3><a href="{{ url_for('login_page') }}">LogOut</a></h3>
+
 			</div>
 
 		<!-- Main -->
 			<div id="main">
 
 				<header class="major container 75%">
-					<h2>We conduct experiments that
-					<br />
-					may or may not seriously
-					<br />
-					break the universe</h2>
+					<h2>UPLOAD A MEETING FILE</h2>
 					
-				</header> 
+				</header>
+
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="record.html" class="image icon fa-phone"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="#" class="image icon fa-upload"><img src="images/pic01.jpg" alt="" /></a>
+						<form action="/upload" enctype="multipart/form-data" method="post">
+						
 						<div class="content">
-							<h3>Record a new Meeting</h3>
+							<input type="file" name="file" />
 						</div>
-					</section>
-					<section class="feature right">
-						<a href="upload.html" class="image icon fa-upload"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>Upload a new recording</h3>
+							<input type="text" name="meeting_name"/>
 						</div>
+						<input type="submit" value="Upload" />
+						</form>
 					</section>
-					<section class="feature left">
-						<a href="search.html" class="image icon fa-search"><img src="images/pic03.jpg" alt="" /></a>
-						<div class="content">
-							<h3>Search from old content</h3>
-							
-						</div>
-					</section>
+
 				</div>
 
 				</div>
@@ -216,6 +209,8 @@
 			<div id="footer">
 				<div class="container 75%">
 
+
+					
 					<!--<header class="major last">
 						<h2>Login</h2>
 					</header>-->
@@ -253,11 +248,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="/static/assets/js/jquery.min.js"></script>
+			<script src="/static/assets/js/skel.min.js"></script>
+			<script src="/static/assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="/static/assets/js/main.js"></script>
 
 	</body>
 </html>
